# vik-raft

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  config.txt  setup.sh
docs/: protocol.txt
proto/: messages.proto  service.proto
src/: cluster_members.h  config.h  config_parser.h  logging.h  main.cc  main.cpp  messages.h  node.h  node_id.h  raft_network.cpp  raft_network.h  raft_node.cpp  raft_node.h  state_manager.h  timer.cpp  timer.h  util.h
src/gateway/: gateway.h  main.cpp
src/networking/: message_handler.h  network_manager.h  tcp_client.h  tcp_server.h
src/node/: cluster_members.h  election_timer.h  main.cpp  node.h  state_manager.h
src/tcp/: connection_store.h  messages.h  tcp_client.h  tcp_listener.h  tcp_server.h
